==> marcinwionczyk/cnc_controller/Src/Stepper.c <==
#include <stdint.h>
#include <string.h>
#include "Config.h"
#include "Planner.h"
#include "Probe.h"
#include "System.h"
#include "Settings.h"
#include "util.h"
#include "tim.h"
#include "Stepper.h"
#include "gpio.h"
#include "System32.h"
#define DT_SEGMENT						(1.0f/(ACCELERATION_TICKS_PER_SECOND*60.0f)) // min/segment
#define REQ_MM_INCREMENT_SCALAR 		1.25f
#define RAMP_ACCEL						0
#define RAMP_CRUISE						1
#define RAMP_DECEL						2
#define RAMP_DECEL_OVERRIDE				3
#define PREP_FLAG_RECALCULATE			BIT(0)
#define PREP_FLAG_HOLD_PARTIAL_BLOCK	BIT(1)
#define PREP_FLAG_PARKING				BIT(2)
#define PREP_FLAG_DECEL_OVERRIDE		BIT(3)
#define MAX_AMASS_LEVEL		3
#define AMASS_LEVEL1			(uint32_t)(F_TIMER_STEPPER/8000) // Over-drives ISR (x2). Defined as F_CPU/(Cutoff frequency in Hz)
#define AMASS_LEVEL2			(uint32_t)(F_TIMER_STEPPER/4000) // Over-drives ISR (x4)
#define AMASS_LEVEL3			(uint32_t)(F_TIMER_STEPPER/2000) // Over-drives ISR (x8)
    #define STEP_TIMER_MIN          (uint16_t)(F_TIMER_STEPPER / MAX_STEP_RATE_HZ)
    #define STEP_TIMER_MIN          (uint16_t)((F_TIMER_STEPPER / 60000))

void Stepper_Init(void)
{
	LL_TIM_EnableIT_CC1(TIM9);
	LL_TIM_EnableIT_UPDATE(TIM9);
}

void Stepper_WakeUp(void)
{
	// Enable stepper drivers.
	if(BIT_IS_TRUE(settings.flags, BITFLAG_INVERT_ST_ENABLE)) {
	    LL_GPIO_ResetOutputPin(ENABLE_GPIO_Port, ENABLE_Pin);
	}
	else {
	    LL_GPIO_SetOutputPin(ENABLE_GPIO_Port, ENABLE_Pin);
	}

    // Give steppers some time to wake up
    //LL_mDelay(10);
	Delay_ms(10);

	// Initialize stepper output bits to ensure first ISR call does not step.
	//st.step_outbits = step_port_invert_mask;
	st.step_outbits = 0;

	// Enable Stepper Driver Interrupt
    LL_TIM_EnableCounter(TIM9);
}

void Stepper_Disable(uint8_t ovr_disable)
{
	// Disable Stepper Driver Interrupt.
	LL_TIM_DisableCounter(TIM9);
	Delay_us(1);

	// Reset stepper pins
	Stepper_PortResetISR();

	// Set stepper driver idle state, disabled or enabled, depending on settings and circumstances.
	bool pin_state = false; // Keep enabled.

	if(((settings.stepper_idle_lock_time != 0xFF) || sys_rt_exec_alarm || sys.state == STATE_SLEEP) && sys.state != STATE_HOMING) {
		// Force stepper dwell to lock axes for a defined amount of time to ensure the axes come to a complete
		// stop and not drift from residual inertial forces at the end of the last movement.
		//LL_mDelay(settings.stepper_idle_lock_time);
		Delay_ms(settings.stepper_idle_lock_time);
		pin_state = true; // Override. Disable steppers.
	}

	if(ovr_disable)
    {
        // Disable
        pin_state = true;
    }

	if(BIT_IS_TRUE(settings.flags, BITFLAG_INVERT_ST_ENABLE)) {
		pin_state = !pin_state;
	} // Apply pin invert.

	if(pin_state) {
	    LL_GPIO_ResetOutputPin(ENABLE_GPIO_Port, ENABLE_Pin);
	}
	else {
        LL_GPIO_SetOutputPin(ENABLE_GPIO_Port, ENABLE_Pin);
	}
}

void Stepper_MainISR(void)
{
    if(st.step_outbits & (1<<X_STEP_BIT)) {
		if(step_port_invert_mask & (1<<X_STEP_BIT)) {
			// Low pulse
			LL_GPIO_ResetOutputPin(STEP_X_GPIO_Port, STEP_X_Pin);
		}
		else {
			// High pulse
            LL_GPIO_SetOutputPin(STEP_X_GPIO_Port, STEP_X_Pin);
		}
    }
    if(st.step_outbits & (1<<Y_STEP_BIT)) {
		if(step_port_invert_mask & (1<<Y_STEP_BIT)) {
			// Low pulse
			LL_GPIO_ResetOutputPin(STEP_Y_GPIO_Port, STEP_Y_Pin);
		}
		else {
			// High pulse
            LL_GPIO_SetOutputPin(STEP_Y_GPIO_Port, STEP_Y_Pin);
		}
    }
    if(st.step_outbits & (1<<Z_STEP_BIT)) {
		if(step_port_invert_mask & (1<<Z_STEP_BIT)) {
			// Low pulse
            LL_GPIO_ResetOutputPin(STEP_Z_GPIO_Port, STEP_Z_Pin);
		}
		else {
			// High pulse
            LL_GPIO_SetOutputPin(STEP_Z_GPIO_Port, STEP_Z_Pin);
		}
    }

	// If there is no step segment, attempt to pop one from the stepper buffer
	if(st.exec_segment == 0) {
		// Anything in the buffer? If so, load and initialize next step segment.
		if(segment_buffer_head != segment_buffer_tail) {
			// Initialize new step segment and load number of steps to execute
			st.exec_segment = &segment_buffer[segment_buffer_tail];

			// Initialize step segment timing per step and load number of steps to execute.
			// Limit ISR to 50 KHz
			if(st.exec_segment->cycles_per_tick < STEP_TIMER_MIN) {
				st.exec_segment->cycles_per_tick = STEP_TIMER_MIN;
			}
			LL_TIM_SetAutoReload(TIM9, st.exec_segment->cycles_per_tick);
			LL_TIM_OC_SetCompareCH1(TIM9, st.exec_segment->cycles_per_tick * 0.75);
			st.step_count = st.exec_segment->n_step; // NOTE: Can sometimes be zero when moving slow.

			// If the new segment starts a new planner block, initialize stepper variables and counters.
			// NOTE: When the segment data index changes, this indicates a new planner block.
			if(st.exec_block_index != st.exec_segment->st_block_index) {
				st.exec_block_index = st.exec_segment->st_block_index;
				st.exec_block = &st_block_buffer[st.exec_block_index];

				// Initialize Bresenham line and distance counters
				st.counter_x = st.counter_y = st.counter_z = (st.exec_block->step_event_count >> 1);
			}

			st.dir_outbits = st.exec_block->direction_bits ^ dir_port_invert_mask;

			// Set the direction pins directly here to make sure that the signal is valid when stepping the steppers
			// Some driver e.g. require a setup time of a few us.
			if(st.dir_outbits & (1<<X_DIRECTION_BIT)) {
			    LL_GPIO_ResetOutputPin(DIR_X_GPIO_Port, DIR_X_Pin);
			}
			else {
                LL_GPIO_SetOutputPin(DIR_X_GPIO_Port, DIR_X_Pin);
			}
			if(st.dir_outbits & (1<<Y_DIRECTION_BIT)) {
                LL_GPIO_SetOutputPin(DIR_Y_GPIO_Port, DIR_Y_Pin);
			}
			else {
                LL_GPIO_ResetOutputPin(DIR_Y_GPIO_Port, DIR_Y_Pin);
			}
			if(st.dir_outbits & (1<<Z_DIRECTION_BIT)) {
                LL_GPIO_SetOutputPin(DIR_Z_GPIO_Port, DIR_Z_Pin);
			}
			else {
                LL_GPIO_ResetOutputPin(DIR_Z_GPIO_Port, DIR_Z_Pin);
			}

			// With AMASS enabled, adjust Bresenham axis increment counters according to AMASS level.
			st.steps[X_AXIS] = st.exec_block->steps[X_AXIS] >> st.exec_segment->amass_level;
			st.steps[Y_AXIS] = st.exec_block->steps[Y_AXIS] >> st.exec_segment->amass_level;
			st.steps[Z_AXIS] = st.exec_block->steps[Z_AXIS] >> st.exec_segment->amass_level;

		}
		else {
			// Segment buffer empty. Shutdown.
			Stepper_Disable(0);
			System_SetExecStateFlag(EXEC_CYCLE_STOP); // Flag main program for cycle end

			return; // Nothing to do but exit.
		}
	}


	// Check probing state.
	if(sys_probe_state == PROBE_ACTIVE) {
		Probe_StateMonitor();
	}

	// Reset step out bits.
	st.step_outbits = 0;

	// Execute step displacement profile by Bresenham line algorithm
	st.counter_x += st.steps[X_AXIS];

	if(st.counter_x > st.exec_block->step_event_count) {
		st.step_outbits |= (1<<X_STEP_BIT);
		st.counter_x -= st.exec_block->step_event_count;

        if(st.exec_segment->backlash_motion == 0)
        {
            if(st.exec_block->direction_bits & (1<<X_DIRECTION_BIT)) {
                sys_position[X_AXIS]--;
            }
            else {
                sys_position[X_AXIS]++;
            }
        }
	}

	st.counter_y += st.steps[Y_AXIS];

	if(st.counter_y > st.exec_block->step_event_count) {
		st.step_outbits |= (1<<Y_STEP_BIT);
		st.counter_y -= st.exec_block->step_event_count;

        if(st.exec_segment->backlash_motion == 0)
        {
            if(st.exec_block->direction_bits & (1<<Y_DIRECTION_BIT)) {
                sys_position[Y_AXIS]--;
            }
            else {
                sys_position[Y_AXIS]++;
            }
        }
	}

	st.counter_z += st.steps[Z_AXIS];

	if(st.counter_z > st.exec_block->step_event_count) {
		st.step_outbits |= (1<<Z_STEP_BIT);
		st.counter_z -= st.exec_block->step_event_count;

        if(st.exec_segment->backlash_motion == 0)
        {
            if(st.exec_block->direction_bits & (1<<Z_DIRECTION_BIT)) {
                sys_position[Z_AXIS]--;
            }
            else {
                sys_position[Z_AXIS]++;
            }
        }
	}

	// During a homing cycle, lock out and prevent desired axes from moving.
	if(sys.state == STATE_HOMING) {
		st.step_outbits &= sys.homing_axis_lock;
	}

	st.step_count--; // Decrement step events count
	if(st.step_count == 0) {
		// Segment is complete. Discard current segment and advance segment indexing.
		st.exec_segment = 0;

		if(++segment_buffer_tail == SEGMENT_BUFFER_SIZE) {
			segment_buffer_tail = 0;
		}
	}
}

void Stepper_PortResetISR(void)
{
	// Reset stepping pins (leave the direction pins)

	// X
	if(step_port_invert_mask & (1<<X_STEP_BIT)) {
	    LL_GPIO_SetOutputPin(STEP_X_GPIO_Port, STEP_X_Pin);
	}
	else {
        LL_GPIO_ResetOutputPin(STEP_X_GPIO_Port, STEP_X_Pin);
	}

	// Y
	if(step_port_invert_mask & (1<<Y_STEP_BIT)) {
        LL_GPIO_SetOutputPin(STEP_Y_GPIO_Port, STEP_Y_Pin);
	}
	else {
        LL_GPIO_ResetOutputPin(STEP_Y_GPIO_Port, STEP_Y_Pin);
	}

	// Z
	if(step_port_invert_mask & (1<<Z_STEP_BIT)) {
        LL_GPIO_SetOutputPin(STEP_Z_GPIO_Port, STEP_Z_Pin);
	}
	else {
        LL_GPIO_ResetOutputPin(STEP_Z_GPIO_Port, STEP_Z_Pin);
	}
}

void Stepper_Reset(void)
{
	// Initialize stepper driver idle state.
	Stepper_Disable(0);

	// Initialize stepper algorithm variables.
	memset(&prep, 0, sizeof(Stepper_PrepData_t));
	memset(&st, 0, sizeof(Stepper_t));

	st.exec_segment = 0;
	pl_block = 0;  // Planner block pointer used by segment buffer
	segment_buffer_tail = 0;
	segment_buffer_head = 0; // empty = tail
	segment_next_head = 1;

	Stepper_GenerateStepDirInvertMasks();
	st.dir_outbits = dir_port_invert_mask; // Initialize direction bits to default.

	// Initialize step and direction port pins.
	// TODO: Stepper invert mask
	// Reset Step Pins
    LL_GPIO_ResetOutputPin(STEP_X_GPIO_Port, STEP_X_Pin);
    LL_GPIO_ResetOutputPin(STEP_Y_GPIO_Port, STEP_Y_Pin);
    LL_GPIO_ResetOutputPin(STEP_Z_GPIO_Port, STEP_Z_Pin);

	// Reset Direction Pins
    LL_GPIO_ResetOutputPin(DIR_X_GPIO_Port, DIR_X_Pin);
    LL_GPIO_ResetOutputPin(DIR_Y_GPIO_Port, DIR_Y_Pin);
    LL_GPIO_ResetOutputPin(DIR_Z_GPIO_Port, DIR_Z_Pin);
}
